# familiarity_to_development_tools_course_assignment4

./: CMakeLists.txt  README.md
c_client_server/: CMakeLists.txt
c_client_server/include/: client.h
c_client_server/src/: client.c  server.c
py_binder/: setup.py
py_binder/clieServModule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py_binder/include/: server.h
py_binder/src/: CMakeLists.txt  client.c  clieserv_helper.c  py_binder.c  server.c
py_binder/src/include/: clieserv_helper.h
py_binder/test py codes/: client.py  server.py
